--- a/templates/posts/index.html.twig
+++ b/templates/posts/index.html.twig
@@ -38,7 +38,7 @@
                 <div class="card-body">
                     <h5 class="card-title">{{ posts.title|capitalize }}</h5>
                     <small class="text-muted">Shared by {{ posts.user.firstName|capitalize }} {{ posts.user.lastName|capitalize }} {{ posts.createdAt| ago }}</small>
-                    <p class="card-text">{{ posts.content|capitalize }}</p>
+                    <p class="card-text">{{ posts.content|capitalize| u.trugncate(20, '...') }}</p>
                     <div class="small d-flex justify-content-start">
                         <a href="#!" class="d-flex align-items-center me-3">
                             <i class="far fa-thumbs-up me-2"></i>
