feat: added read() to open posts on single page

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,15 +21,15 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container px-5">
-            <a class="navbar-brand" href="#">SymfonyNews</a>
+            <a class="navbar-brand" href="/">SymfonyNews</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#!">Artworks</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#!">Artists</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#!">Log in</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/artworks">Artworks</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/artists">Artists</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/login">Log in</a></li>
                 </ul>
             </div>
         </div>
@@ -39,7 +39,7 @@
         {% endblock %}
 
         <footer class="py-5 bg-dark">
-            <div class="container px-5"><p class="m-0 text-center text-white">Copyright &copy; SymfonyNews 2021</p></div>
+            <div class="container px-5"><p class="m-0 text-center text-white">Copyright &copy; Daphné Augier for SymfonyNews 2021</p></div>
         </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
