--- a/templates/posts/index.html.twig
+++ b/templates/posts/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello PostsController!{% endblock %}
+{% block title %}SymfonyNews{% endblock %}
 
 {% block body %}
 
