feat: added form handling for artists

--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -4,11 +4,7 @@
 
 {% block body %}
     <main role="main">
-
-    <div class="py-5 bg-light border-bottom row row-cols-1 row-cols-md-3 g-5">
-        <div class="container"></div>
-    </div>
-
+        <div class="py-5 bg-light border-bottom row row-cols-1 row-cols-md-3 g-5"></div>
         <div class="container">
             <table class="table table-hovered">
                 <thead>
