--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,6 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
+        <link rel="manifest" href="icon/site.webmanifest">
 
         <title>
             {% block title %}
@@ -35,12 +39,16 @@
         </div>
     </nav>
 
-        {% block body %}
-        {% endblock %}
+    {% block body %}
+    {% endblock %}
 
-        <footer class="py-5 bg-dark">
-            <div class="container px-5"><p class="m-0 text-center text-white">Copyright &copy; Daphné Augier for SymfonyNews 2021</p></div>
-        </footer>
+    <footer class="py-5 bg-dark">
+        <div class="container px-5"><p class="m-0 text-center text-white">
+        {% block footer %}
+            &copy; Copyright 2021 by <a href="https://github.com/daphneaugier">Daphné Augier</a>s
+        {% endblock %}
+            </p></div>
+    </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"></script>
