fix: logout in navbar when loggedin

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,22 +22,41 @@
     </head>
 
     <body>
-
+    {% block navbar %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container px-5">
             <a class="navbar-brand" href="/">SymfonyNews</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/artworks">Artworks</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/artists">Artists</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/login">Log in</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/about">About</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/artworks">Artworks</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="/artists">Artists</a>
+                    </li>
+
+                    <li class="nav-item">
+                        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                        <a class="nav-link" href="{{ path('app_logout') }}">Log out</a>
+                        {% else %}
+                        <a class="nav-link" href="{{ path('app_login') }}">Log in</a>
+                        {% endif %}
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
+    {% endblock %}
 
     {% block body %}
     {% endblock %}
@@ -45,7 +64,7 @@
     <footer class="py-5 bg-dark">
         <div class="container px-5"><p class="m-0 text-center text-white">
         {% block footer %}
-            &copy; Copyright 2021 by <a href="https://github.com/daphneaugier">Daphné Augier</a>s
+            &copy; Copyright 2021 by <a href="https://github.com/daphneaugier">Daphné Augier</a>
         {% endblock %}
             </p></div>
     </footer>
