--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -24,7 +24,7 @@
         <div class="mb-3">
             You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
         </div>
-    {% endif %}
+    {% else %}
 
     <h1 class="display-10 fw-bolder text-black mb-4" style="text-align: center">Please sign in</h1>
     <label for="inputUsername">Username</label>
@@ -33,24 +33,25 @@
     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
     <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
-
-    {#
-        Remember me functionality
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
+           value="{{ csrf_token('authenticate') }}">
 
     <div class="vertical-center" style="text-align: center" >
     <button class="btn btn-light btn-lg px-4 me-sm-3 mt-3" type="submit">
         Sign in
     </button>
     </div>
+    {% endif %}
+
+    {#
+    Remember me functionality
+    See https://symfony.com/doc/current/security/remember_me.html
+
+    <div class="checkbox mb-3">
+        <label>
+            <input type="checkbox" name="_remember_me"> Remember me
+        </label>
+    </div>
+    #}
+
 </form>
 {% endblock %}
