--- a/templates/posts/read.html.twig
+++ b/templates/posts/read.html.twig
@@ -33,7 +33,7 @@
                             <textarea class="form-control ml-1 shadow-none textarea comment-form" id="comment_text"></textarea>
                                 <small class="commenter-name">{{ posts.user.firstName|capitalize }} {{ posts.user.lastName|capitalize }}</small>
                                 <div class="float-end mt-2 pt-1">
-                                    <button type="button" class="btn btn-dark btn-sm">Post comment</button>
+                                    <button type="button" class="btn btn-dark btn-sm">Comment</button>
                                 </div>
                             </div>
                 </div>
