--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -13,6 +13,7 @@
                     <th>Last name</th>
                     <th>E-mail address</th>
                     <th>Number of posts</th>
+                    <th>Contact</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -22,6 +23,9 @@
                     <td>{{ user.lastName }}</td>
                     <td>{{ user.email }}</td>
                     <td>{{ user.posts | length }}</td>
+                    <td><button type="button" class="btn btn-light btn-sm">
+                            <a href = "mailto: {{ user.email }}" style="text-decoration: none">Contact</a>
+                        </button></td>
                 </tr>
                 {% endfor %}
                 </tbody>
