fix: refactor style

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -35,8 +35,8 @@
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}">
 
-    <div class="vertical-center" style="text-align: center" >
-    <button class="btn btn-light btn-lg px-4 me-sm-3 mt-3" type="submit">
+    <div class="vertical-center" style="text-align: center">
+    <button class="btn btn-dark btn-lg px-4 me-sm-3 mt-3" type="submit">
         Sign in
     </button>
     </div>
