fix: refactor page titles

--- a/templates/posts/read.html.twig
+++ b/templates/posts/read.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Post{% endblock %}
+{% block title %}SymfonyNews{% endblock %}
 
 {% block body %}
 
