--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Artists{% endblock %}
+{% block title %}SymfonyNews{% endblock %}
 
 {% block stylesheets %}
     <style type="text/css">
