--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,7 @@
 
         <title>
             {% block title %}
-                Welcome!
+                SymfonyNews
             {% endblock %}
         </title>
 
