fix: refactor dead code

--- a/templates/posts/index.html.twig
+++ b/templates/posts/index.html.twig
@@ -37,7 +37,7 @@
         {% endfor %}
     </div>
     <div class="bg-light d-grid gap-3 d-sm-flex justify-content-sm-center">
-        <a class="btn btn-dark btn-lg px-4 me-sm-3" href="/submit-art">Submit artwork!</a>
+        <a class="btn btn-dark btn-lg px-4 me-sm-3" href="/submit">Submit artwork!</a>
     </div>
 
     <!-- Contact section-->
