feat: submit section to add an artwork with image and text

--- a/templates/artworks/index.html.twig
+++ b/templates/artworks/index.html.twig
@@ -9,6 +9,8 @@
 
         <h2 class="fw-bolder">Artworks</h2>
         <p class="lead mb-0">All of our artists' posts, and feel free to leave a thumbsup or a comment!</p>
+        <p></p>
+        <a class="btn btn-dark btn-lg px-4 me-sm-3" href="/submit">Submit artwork</a>
     </div>
 
     <div class="py-5 bg-light border-bottom row row-cols-1 row-cols-md-3 g-5">
