fix: added titles

--- a/templates/artworks/submit.html.twig
+++ b/templates/artworks/submit.html.twig
@@ -19,6 +19,7 @@
     <form method="post" class="form_submit">
         <main role="main">
             <div class="container">
+                <h1 class="display-10 fw-bolder text-black mb-4" style="text-align: center">Add Your Artwork</h1>
                 {{ form(form) }}
             </div>
         </main>
