--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -19,6 +19,7 @@
 <form method="post" class="form_edit">
     <main role="main">
         <div class="container">
+            <h1 class="display-10 fw-bolder text-black mb-4" style="text-align: center">Edit Your Profile</h1>
             {{ form_start(form) }}
             {{ form_row(form.firstName) }}
             {{ form_row(form.lastName) }}
